# madara-orchestrator

./: .dockerignore  .env.example  .env.test  .env.test.example  .gitignore  .gitmodules  .makefile-env  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  bootstrap.json  bootstrap_input.json  docker-compose.yml  lcov.info  m-o.code-workspace  migrate-mongo-config.js  package.json  rust-toolchain.toml  test_output.txt  test_output_10000_5000.txt  test_output_10000_5000_backtrace.txt  test_output_10000_5000_lol.txt  test_output_10000_5000_lol_yty.txt  test_output_default.txt
crates/da-clients/avail/: Cargo.toml
crates/da-clients/avail/src/: config.rs  conversion.rs  lib.rs
crates/da-clients/celestia/: Cargo.toml
crates/da-clients/celestia/src/: config.rs  error.rs  lib.rs
crates/da_clients/aptos/: Cargo.toml
crates/da_clients/aptos/src/: config.rs  lib.rs
crates/da_clients/ethereum/: Cargo.toml
crates/da_clients/ethereum/src/: lib.rs
crates/da_clients/ethereum/test_utils/: vec_8_block_630872.txt  vec_8_block_630872_v2.txt
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  constants.rs  lib.rs  main.rs  metrics.rs  routes.rs  telemetry.rs
crates/orchestrator/src/alerts/: mod.rs
crates/orchestrator/src/alerts/aws_sns/: config.rs  mod.rs
crates/orchestrator/src/cli/: aws_config.rs  instrumentation.rs  mod.rs  server.rs  service.rs  snos.rs
crates/orchestrator/src/cli/alert/: aws_sns.rs  mod.rs
crates/orchestrator/src/cli/cron/: event_bridge.rs  mod.rs
crates/orchestrator/src/cli/da/: ethereum.rs  mod.rs
crates/orchestrator/src/cli/database/: mod.rs  mongodb.rs
crates/orchestrator/src/cli/prover/: mod.rs  sharp.rs
crates/orchestrator/src/cli/provider/: aws.rs  mod.rs
crates/orchestrator/src/cli/queue/: aws_sqs.rs  mod.rs
crates/orchestrator/src/cli/settlement/: ethereum.rs  mod.rs  starknet.rs
crates/orchestrator/src/cli/storage/: aws_s3.rs  mod.rs
crates/orchestrator/src/controllers/: errors.rs  jobs_controller.rs
crates/orchestrator/src/cron/: event_bridge.rs  mod.rs
crates/orchestrator/src/data_storage/: mod.rs  types.rs
crates/orchestrator/src/data_storage/aws_s3/: config.rs  mod.rs
crates/orchestrator/src/database/: mod.rs
crates/orchestrator/src/database/mongodb/: config.rs  mod.rs
crates/orchestrator/src/jobs/: constants.rs  conversion.rs  job_handler_factory.rs  metadata.rs  mod.rs  types.rs
crates/orchestrator/src/jobs/da_job/: mod.rs
crates/orchestrator/src/jobs/prover_job/: mod.rs
crates/orchestrator/src/jobs/proving_job/: mod.rs
crates/orchestrator/src/jobs/register_proof_job/: mod.rs
crates/orchestrator/src/jobs/snos_job/: dummy_state.rs  error.rs  fact_info.rs  fact_node.rs  fact_topology.rs  mod.rs
crates/orchestrator/src/jobs/state_update_job/: kzg.rs  mod.rs  utils.rs
crates/orchestrator/src/jobs/state_update_job/test_data/: calldata_proof_20118595.txt  calldata_proof_20120636.txt  calldata_proof_20121691.txt
crates/orchestrator/src/jobs/state_update_job/test_data/651053/: snos_output.json  snos_output_block.json
crates/orchestrator/src/jobs/state_update_job/test_data/651054/: snos_output.json  snos_output_block.json
crates/orchestrator/src/jobs/state_update_job/test_data/651055/: snos_output.json  (+1 more)
crates/orchestrator/src/queue/: job_queue.rs  mod.rs
crates/orchestrator/src/queue/sqs/: mod.rs
crates/orchestrator/src/routes/: app_routes.rs  error.rs  job_routes.rs  mod.rs  types.rs
crates/orchestrator/src/rpc/: config.rs  l1.rs  madara.rs  mod.rs
crates/orchestrator/src/setup/: mod.rs
crates/orchestrator/src/setup/worker_triggers/: event_bridge.rs
crates/orchestrator/src/tests/: config.rs  mod.rs
crates/orchestrator/src/tests/alerts/: mod.rs
crates/orchestrator/src/tests/common/: constants.rs  mod.rs  testcontainer_setups.rs
crates/orchestrator/src/tests/controllers/: mod.rs
crates/orchestrator/src/tests/data_storage/: mod.rs
crates/orchestrator/src/tests/database/: mod.rs
crates/orchestrator/src/tests/jobs/: mod.rs
crates/orchestrator/src/tests/jobs/da_job/: mod.rs
crates/orchestrator/src/tests/jobs/prover_job/: mod.rs
crates/orchestrator/src/tests/jobs/proving_job/: mod.rs
crates/orchestrator/src/tests/jobs/register_proof_job/: mod.rs
crates/orchestrator/src/tests/jobs/snos_job/: mod.rs
crates/orchestrator/src/tests/jobs/state_update_job/: mod.rs
crates/orchestrator/src/tests/parallel/: localstack.rs  mod.rs  mongo.rs  tests.rs
crates/orchestrator/src/tests/queue/: mod.rs
crates/orchestrator/src/tests/server/: job_routes.rs  mod.rs
crates/orchestrator/src/tests/testcontainers/: mod.rs
crates/orchestrator/src/tests/workers/: mod.rs
crates/orchestrator/src/tests/workers/proving/: mod.rs
crates/orchestrator/src/tests/workers/snos/: mod.rs
crates/orchestrator/src/tests/workers/state_update/: mod.rs
crates/orchestrator/src/tests/workers/update_state/: mod.rs
crates/orchestrator/src/tests/workers/utils/: mod.rs
crates/orchestrator/src/utils/: io.rs
crates/orchestrator/src/workers/: data_availability_synchronizer.rs  data_submission.rs  data_submission_worker.rs  mod.rs  proof_registration.rs  proving.rs  snos.rs  update_state.rs
crates/prover-services/gps-fact-checker/: Cargo.toml
crates/prover-services/gps-fact-checker/src/: fact_info.rs  fact_node.rs  fact_topology.rs  lib.rs
crates/prover-services/gps-fact-checker/tests/artifacts/: CairoVerifier.json
crates/settlement-clients/starknet/: Cargo.toml
crates/settlement-clients/starknet/src/: config.rs  conversion.rs  lib.rs
crates/settlement-clients/starknet/src/tests/: mod.rs  preset.yml  setup.rs  test.rs
e2e-tests/: Cargo.toml  test_mine.rs  test_samples.rs  tests.rs  tests_telemetry.rs
e2e-tests/artifacts/: get_state_update_101038.json  get_state_update_238996.json  get_state_update_671070.json  nonces_671070.json  program_output_101038.txt  snos_output.json
e2e-tests/artifacts/contracts/: Starknet.json
e2e-tests/src/: anvil.rs  ethereum.rs  lib.rs  localstack.rs  mock_server.rs  mongodb.rs  node.rs  sharp.rs  starknet_client.rs  utils.rs
(+121 files in other folders)
