[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
orchestrator.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
url.workspace = true

[[test]]
name = "test_samples"
path = "test_samples.rs"
