[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-macros = { workspace = true }
color-eyre = { workspace = true }
da-client-interface = { workspace = true }
dotenvy = { workspace = true }
ethereum-da-client = { workspace = true, optional = true }
futures = { workspace = true }
mongodb = { workspace = true, features = ["bson-uuid-1"], optional = true }
omniqueue = { workspace = true, optional = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[features]
default = ["ethereum", "with_mongodb", "with_sqs"]
ethereum = ["ethereum-da-client"]
with_mongodb = ["mongodb"]
with_sqs = ["omniqueue"]
