[package]
name = "celestia-da-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
celestia-rpc = "0.2.0"
celestia-types = "0.2.0"
color-eyre = { workspace = true }
da-client-interface = { workspace = true }
dotenv = "0.15"
mockall = "0.12.1"
reqwest = { version = "0.12.3" }
rstest = { workspace = true }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
tokio = { workspace = true }
url = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
tokio-test = "*"
