[package]
name = "ethereum-da-client"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "68952c0", features = [
  "consensus",
  "providers",
  "rpc-client",
  "transport-http",
  "network",
  "eips",
  "signers",
  "signer-wallet",
] }
async-trait = { workspace = true }
color-eyre = { workspace = true }
da-client-interface = { workspace = true }
reqwest = { version = "0.12.3" }
c-kzg = "1.0.0"
dotenv = "0.15"
starknet = { workspace = true }
url = { workspace = true }
utils = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "*"
