[package]
name = "gps-fact-checker"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "sol-types",
  "json",
  "contract",
  "providers",
  "rpc-client",
  "transport-http",
  "reqwest",
] }
async-trait.workspace = true
cairo-vm.workspace = true
itertools.workspace = true
log = "0.4.21"
starknet.workspace = true
thiserror.workspace = true
url.workspace = true
utils.workspace = true
