[package]
name = "starknet-settlement-client"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
c-kzg = { workspace = true }
color-eyre = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
settlement-client-interface = { workspace = true }
starknet = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utils = { workspace = true }
appchain-core-contract-client = { workspace = true }
tempfile.workspace = true
anyhow = "1.0.89"
env_logger = "0.11.5"
dotenvy.workspace = true

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
serde_json.workspace = true
tokio-test = "*"
